vagrant/synced_folders_devstack/k8s/evpn-agent-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: evpn-agent-svc
spec:
  type: NodePort
  ports:
  - port: 179
    targetPort: bgp
    nodePort: 179
  selector:
    app: evpn-agent
