vagrant/synced_folders_devstack/k8s/evpn-api-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: evpn-api-svc
spec:
  ports:
  - port: 8081
    targetPort: http
  selector:
    app: evpn-api
