vagrant/synced_folders_devstack/k8s/evpn-api-ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: evpn-api-ing
spec:
  rules:
  - host: evpn-api.domain-x.com
    http:
      paths:
      - path: /
        backend:
          serviceName: evpn-api-svc
          servicePort: 8081
